...
                TrialPostIcons.NotificationOn -> Icons.Filled.NotificationAdd
                TrialPostIcons.NotificationOff -> Icons.Filled.NotificationsOff
                else -> {Icons.Filled.Message}
            },
            //tint = MaterialTheme.colors.secondary,
            contentDescription = when (add) {
                TrialPostIcons.NotificationOn -> "notificationsOn"
                TrialPostIcons.NotificationOff -> "notificationsOff"
                else -> "messageContact"
            },
            modifier = modifier
                .scale(1f)
        )
    }
...
