...
    <!--Trial listing Strings-->
    <string name="logo">Probes logo</string>
    <string name="nyesteStudier">Nyeste studier</string>
    <string name="filtreredeStudier">%d fundne studier</string>
    <string name="filtreredeStudierSingular">%d studie fundet</string>
    <string name="mereInfo">Læs mere...</string>
    <string name="ansoeg">Ansøg</string>
    <string name="formaal">Formål: </string>
    <string name="lokation">Lokation: </string>
    <string name="forloeb">Forløb: </string>
    <string name="varighed">Varighed: </string>
    <string name="sygdom">Sygdom: </string>
    <string name="intervention">Intervention: </string>
...
